# drift-cli

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-CODE.md  LICENSE-CONTENT.md  README.md  pyproject.toml
drift/: __init__.py  __main__.py  check.py  interface.py  storage.py
tests/: test_check.py  test_storage.py
